tests/semantic/fail/wrong_assign.c
float f; int* p;
f = p; // E004: atribuição incompatível
